; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/one-true-awk/extr_b.c_mkdfa.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/one-true-awk/extr_b.c_mkdfa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32**, i32, i32*, i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32* }

@firstbasestr = common dso_local global i32* null, align 8
@basestr = common dso_local global i32* null, align 8
@CAT = common dso_local global i32 0, align 4
@STAR = common dso_local global i32 0, align 4
@ALL = common dso_local global i32 0, align 4
@NIL = common dso_local global i32* null, align 8
@FINAL = common dso_local global i32 0, align 4
@poscnt = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"out of space for fa\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"out of space in makedfa\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_7__* @mkdfa(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** @firstbasestr, align 8
  %10 = load i32*, i32** @firstbasestr, align 8
  store i32* %10, i32** @basestr, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32* @reparse(i8* %11)
  store i32* %12, i32** %5, align 8
  %13 = load i32, i32* @CAT, align 4
  %14 = load i32, i32* @STAR, align 4
  %15 = load i32, i32* @ALL, align 4
  %16 = load i32*, i32** @NIL, align 8
  %17 = load i32*, i32** @NIL, align 8
  %18 = call i32* @op2(i32 %15, i32* %16, i32* %17)
  %19 = load i32*, i32** @NIL, align 8
  %20 = call i32* @op2(i32 %14, i32* %18, i32* %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32* @op2(i32 %13, i32* %20, i32* %21)
  store i32* %22, i32** %6, align 8
  %23 = load i32, i32* @CAT, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = load i32, i32* @FINAL, align 4
  %26 = load i32*, i32** @NIL, align 8
  %27 = load i32*, i32** @NIL, align 8
  %28 = call i32* @op2(i32 %25, i32* %26, i32* %27)
  %29 = call i32* @op2(i32 %23, i32* %24, i32* %28)
  store i32* %29, i32** %6, align 8
  store i32 0, i32* @poscnt, align 4
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @penter(i32* %30)
  %32 = load i32, i32* @poscnt, align 4
  %33 = sext i32 %32 to i64
  %34 = mul i64 %33, 4
  %35 = add i64 48, %34
  %36 = trunc i64 %35 to i32
  %37 = call i64 @calloc(i32 1, i32 %36)
  %38 = inttoptr i64 %37 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %38, %struct.TYPE_7__** %7, align 8
  %39 = icmp eq %struct.TYPE_7__* %38, null
  br i1 %39, label %40, label %42

40:                                               ; preds = %2
  %41 = call i32 @overflo(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %42

42:                                               ; preds = %40, %2
  %43 = load i32, i32* @poscnt, align 4
  %44 = sub nsw i32 %43, 1
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %46 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %45, i32 0, i32 0
  store i32 %44, i32* %46, align 8
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %48 = load i32*, i32** %6, align 8
  %49 = call i32 @cfoll(%struct.TYPE_7__* %47, i32* %48)
  %50 = load i32*, i32** %6, align 8
  %51 = call i32 @freetr(i32* %50)
  %52 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %53 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %52, i32 0, i32 5
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %53, align 8
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i64 0
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %55, i32 0, i32 0
  %57 = load i32*, i32** %56, align 8
  %58 = load i32, i32* %57, align 4
  %59 = call i64 @calloc(i32 %58, i32 4)
  %60 = inttoptr i64 %59 to i32*
  %61 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %61, i32 0, i32 1
  %63 = load i32**, i32*** %62, align 8
  %64 = getelementptr inbounds i32*, i32** %63, i64 0
  store i32* %60, i32** %64, align 8
  %65 = icmp eq i32* %60, null
  br i1 %65, label %66, label %68

66:                                               ; preds = %42
  %67 = call i32 @overflo(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  br label %68

68:                                               ; preds = %66, %42
  %69 = call i64 @calloc(i32 1, i32 4)
  %70 = inttoptr i64 %69 to i32*
  %71 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %72 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %71, i32 0, i32 1
  %73 = load i32**, i32*** %72, align 8
  %74 = getelementptr inbounds i32*, i32** %73, i64 1
  store i32* %70, i32** %74, align 8
  %75 = icmp eq i32* %70, null
  br i1 %75, label %76, label %78

76:                                               ; preds = %68
  %77 = call i32 @overflo(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  br label %78

78:                                               ; preds = %76, %68
  %79 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %80 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %79, i32 0, i32 1
  %81 = load i32**, i32*** %80, align 8
  %82 = getelementptr inbounds i32*, i32** %81, i64 1
  %83 = load i32*, i32** %82, align 8
  store i32 0, i32* %83, align 4
  %84 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %85 = load i32, i32* %4, align 4
  %86 = call i32 @makeinit(%struct.TYPE_7__* %84, i32 %85)
  %87 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %88 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %87, i32 0, i32 4
  store i32 %86, i32* %88, align 8
  %89 = load i32, i32* %4, align 4
  %90 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %91 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %90, i32 0, i32 2
  store i32 %89, i32* %91, align 8
  %92 = load i8*, i8** %3, align 8
  %93 = call i64 @tostring(i8* %92)
  %94 = inttoptr i64 %93 to i32*
  %95 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %96 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %95, i32 0, i32 3
  store i32* %94, i32** %96, align 8
  %97 = load i32*, i32** @firstbasestr, align 8
  %98 = load i32*, i32** @basestr, align 8
  %99 = icmp ne i32* %97, %98
  br i1 %99, label %100, label %107

100:                                              ; preds = %78
  %101 = load i32*, i32** @basestr, align 8
  %102 = icmp ne i32* %101, null
  br i1 %102, label %103, label %106

103:                                              ; preds = %100
  %104 = load i32*, i32** @basestr, align 8
  %105 = call i32 @xfree(i32* %104)
  br label %106

106:                                              ; preds = %103, %100
  br label %107

107:                                              ; preds = %106, %78
  %108 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  ret %struct.TYPE_7__* %108
}

declare dso_local i32* @reparse(i8*) #1

declare dso_local i32* @op2(i32, i32*, i32*) #1

declare dso_local i32 @penter(i32*) #1

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @overflo(i8*) #1

declare dso_local i32 @cfoll(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @freetr(i32*) #1

declare dso_local i32 @makeinit(%struct.TYPE_7__*, i32) #1

declare dso_local i64 @tostring(i8*) #1

declare dso_local i32 @xfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
